# dynamic-hand-gesture-classification

./: CMakeLists.txt  README.md  dynamic-hand-gestures.py  inference.py  make-dataset.sh  package.xml  requirements.txt  ros_receiver.py  run-batch-double-view.sh  run-batch-shrec-contest-dataset-with-noise.sh  run-batch-shrec-contest-dataset.sh  run-batch.sh  usage.md  utils.py
datasets/SFINGE3D-dataset-v1/: readme.md
datasets/SFINGE3D-dataset-v1/20200406/: datafile_10_1.csv.xz  datafile_10_10.csv.xz  datafile_10_11.csv.xz  datafile_10_12.csv.xz  datafile_10_13.csv.xz  datafile_10_14.csv.xz  datafile_10_15.csv.xz  datafile_10_16.csv.xz  datafile_10_17.csv.xz  datafile_10_18.csv.xz  datafile_10_19.csv.xz  datafile_10_2.csv.xz  datafile_10_20.csv.xz  datafile_10_21.csv.xz  datafile_10_22.csv.xz  datafile_10_23.csv.xz  datafile_10_24.csv.xz  datafile_10_25.csv.xz  datafile_10_26.csv.xz  datafile_10_27.csv.xz  datafile_10_28.csv.xz  datafile_10_29.csv.xz  datafile_10_3.csv.xz  datafile_10_30.csv.xz  datafile_10_31.csv.xz  datafile_10_32.csv.xz  datafile_10_33.csv.xz  datafile_10_34.csv.xz  datafile_10_35.csv.xz  datafile_10_36.csv.xz  datafile_10_4.csv.xz  datafile_10_5.csv.xz  datafile_10_6.csv.xz  datafile_10_7.csv.xz  datafile_10_8.csv.xz  datafile_10_9.csv.xz  datafile_11_1.csv.xz  datafile_11_10.csv.xz  datafile_11_11.csv.xz  datafile_11_12.csv.xz  (+428 more)
datasets/SFINGE3D-dataset-v1/output-images/: make-dataset.sh
docs/: troubleshooting.txt
info/: articulations.txt  dataset-csv-xz-list-of-sequences.txt  english-labels.txt  french-labels.txt  gesture-classes.txt  training-set.txt  validation-set.txt
info/ComplementaryInfo_LMDHG/: ArticulationsOrder.txt  README.txt  demoProjet.m
info/SFINGE-3D-dataset-v1/: gesture-classes.txt  n-files.txt
models/: .gitattributes  dynamic-hand-gestures-top-view-with-colored-fingers-and-tip-traces-resnet-50-img_size-1080p-6b-2020-02-10_18.21.22_0-best-model-89.08-perc-acc.pkl  placeholder.txt  resnet-50-img_size-540-960-4a-2020-02-25_11.05.03-epoch-8-stronger-data-augmentation-new-cnr-dataset-2k-images.pkl  resnet-50-img_size-540-960-4a-2020-04-14_15.48.20-SHREC-contest-dataset-first-attempt-transfer-learning-from-CNR-dataset.pkl  resnet-50-img_size-540-960-4a-2020-04-21_15.47.18-SHREC-contest-dataset-transfer-learning-from-CNR-dataset-data-augmentation-with-partial-gestures-and-noise-epoch-9-acc-0.996360.pth  resnet-50-img_size-540-960-4a-2020-04-21_15.47.18-SHREC-contest-dataset-transfer-learning-from-CNR-dataset-data-augmentation-with-partial-gestures-and-noise.pkl  resnet-50-img_size-540-960-4b-20200221-131552-epoch-9-stronger-data-augmentation.pkl
notebooks/shrec2020-sfinge3D/: dynamic-hand-gesture-classifier-SFINGE3D-dataset-first-attempt-transfer-learning-from-CNR-dataset.ipynb
pics/catching-screenshots/: cmdline.txt
utilities/: conversion.py
